add some ignores
Signed-off-by: Robert Woerle <robert@linuxdevelopment.de>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,13 @@ Module.symvers
 #
 # Top-level generic files
 #
+android.diff
+angstrom-patches/
+attic/
+pack_am437
+pack_mibtec-kernel
+pack_ti-omap-psp
+
 /tags
 /TAGS
 /linux
