am335x-bonblack-d1.dts: add pru0 pins
Signed-off-by: Robert Woerle <robert@linuxdevelopment.de>

--- a/arch/arm/boot/dts/am335x-boneblack-d1.dts
+++ b/arch/arm/boot/dts/am335x-boneblack-d1.dts
@@ -17,7 +17,7 @@
 };
 
 / {
-	model = "TI AM335x BeagleBone Black D1 v0.25";
+	model = "TI AM335x BeagleBone Black D1 v0.26";
 	compatible = "ti,am335x-bone-black", "ti,am335x-bone", "ti,am33xx";
 
 	pru_adc_spi {
@@ -105,7 +105,7 @@
 
 &am33xx_pinmux {
 	pinctrl-names = "default";
-	pinctrl-0 = <&d1_pins>;
+	pinctrl-0 = <&d1_pins &pru_bus_pins>;
 
 	d1_pins: d1_pins {
 		pinctrl-single,pins = <
@@ -113,31 +113,16 @@
 			AM33XX_IOPAD(BONE_P8_08, PIN_INPUT | MUX_MODE2)					/* timer7 */
 			AM33XX_IOPAD(BONE_P8_09, PIN_INPUT | MUX_MODE2)					/* timer5 */
 			AM33XX_IOPAD(BONE_P8_10, PIN_INPUT | MUX_MODE2)					/* timer6 */
-			AM33XX_IOPAD(BONE_P8_11, PIN_INPUT | MUX_MODE7)					/* PRU0 TX_D1 */
-			AM33XX_IOPAD(BONE_P8_12, PIN_INPUT | MUX_MODE7)					/* PRU0 TX_D2 */
-			AM33XX_IOPAD(BONE_P8_14, PIN_INPUT | MUX_MODE7)					/* PRU0 TX_EN */
-			AM33XX_IOPAD(BONE_P8_15, PIN_INPUT | MUX_MODE7)					/* PRU0 CLK_OUT */
-			AM33XX_IOPAD(BONE_P8_16, PIN_INPUT | MUX_MODE7)					/* PRU0 TX_D0 */
-			AM33XX_IOPAD(BONE_P8_17, PIN_INPUT | MUX_MODE7)					/* PRU0 TX D3 */
 			AM33XX_IOPAD(BONE_P8_18, PIN_INPUT | MUX_MODE7)					/* gpio2_1 IN SYNC */
-			AM33XX_IOPAD(BONE_P8_19, PIN_INPUT | MUX_MODE7)					/* PRU0 TX_CLK */
 //			AM33XX_IOPAD(BONE_P8_22, PIN_INPUT | MUX_MODE7)					/*  */
 //			AM33XX_IOPAD(BONE_P8_23, PIN_INPUT | MUX_MODE7)					/* gpio1_4 */
 //			AM33XX_IOPAD(BONE_P8_24, PIN_INPUT | MUX_MODE7)					/*  */
 //			AM33XX_IOPAD(BONE_P8_25, PIN_INPUT | MUX_MODE7)					/* gpio1_0 */
 			AM33XX_IOPAD(BONE_P8_27, PIN_INPUT | MUX_MODE7)					/* gpio2_22 */
-			AM33XX_IOPAD(BONE_P8_28, PIN_INPUT | MUX_MODE7)					/* PRU0 CTS */
 			AM33XX_IOPAD(BONE_P8_30, PIN_INPUT | MUX_MODE7)					/* gpio2_25 */
-			AM33XX_IOPAD(BONE_P8_31, PIN_INPUT | MUX_MODE7)					/* PRU0 RX_CLK */
-			AM33XX_IOPAD(BONE_P8_32, PIN_INPUT | MUX_MODE7)					/* PRU0 RX DV */
 			AM33XX_IOPAD(BONE_P8_33, PIN_INPUT | MUX_MODE7)					/* gpio0_9 */
-			AM33XX_IOPAD(BONE_P8_34, PIN_INPUT | MUX_MODE7)					/* PRU0 RX D0 */
 			AM33XX_IOPAD(BONE_P8_35, PIN_INPUT | MUX_MODE7)					/* gpio0_8 */
-			AM33XX_IOPAD(BONE_P8_36, PIN_INPUT | MUX_MODE7)					/* PRU0 RX D1 */
-			AM33XX_IOPAD(BONE_P8_37, PIN_INPUT | MUX_MODE7)					/* PRU0 RX D3 */
-			AM33XX_IOPAD(BONE_P8_38, PIN_INPUT | MUX_MODE7)					/* PRU0 RX D2 */
 			AM33XX_IOPAD(BONE_P8_39, PIN_INPUT | MUX_MODE7)					/* gpio2_12 */
-			AM33XX_IOPAD(BONE_P8_40, PIN_INPUT | MUX_MODE7)					/* PRU0 RTS */
 
 			AM33XX_IOPAD(BONE_P9_12, PIN_INPUT | MUX_MODE7)					/* gpio1_28 OUT SYNC */
 			AM33XX_IOPAD(BONE_P9_14, PIN_INPUT | MUX_MODE7)					/* gpio1_18 RTC IRQ */
@@ -149,6 +134,26 @@
 			AM33XX_IOPAD(BONE_P9_41, PIN_INPUT | MUX_MODE7)					/* gpio3_20 */
 			AM33XX_IOPAD(BONE_P9_42, PIN_INPUT | MUX_MODE7)					/* gpio3_18 */
 		>;
+	};
+
+	pru_bus_pins: pru_bus_pins {
+		pinctrl-single,pins = <
+			AM33XX_IOPAD(BONE_P8_11, PIN_INPUT | MUX_MODE6)					/* gpio1_13.pr1_pru0_pru_r30_15 PRU0 TX_D1 */
+			AM33XX_IOPAD(BONE_P8_12, PIN_INPUT | MUX_MODE6)					/* gpio1_12.pr1_pru0_pru_r30_14 PRU0 TX_D2 */
+			AM33XX_IOPAD(BONE_P8_14, PIN_INPUT | MUX_MODE7)					/* gpio0_26 PRU0 TX_EN */
+			AM33XX_IOPAD(BONE_P8_15, PIN_INPUT | MUX_MODE6)					/* gpio1_15.pr1_pru0_pru_r31_15 PRU0 CLK_OUT */
+			AM33XX_IOPAD(BONE_P8_16, PIN_INPUT | MUX_MODE6)					/* gpio1_14.pr1_pru0_pru_r31_14 PRU0 TX_D0 */
+			AM33XX_IOPAD(BONE_P8_17, PIN_INPUT | MUX_MODE7)					/* gpio0_27.gpio0_27 PRU0 TX D3 */
+			AM33XX_IOPAD(BONE_P8_19, PIN_INPUT | MUX_MODE7)					/* gpio2_22.gpio0_22 PRU0 TX_CLK */
+			AM33XX_IOPAD(BONE_P8_28, PIN_INPUT | MUX_MODE7)					/* gpio2_24.gpio2_24 ?  PRU0 PRU0 CTS */
+			AM33XX_IOPAD(BONE_P8_31, PIN_INPUT | MUX_MODE7)					/* uart5.ctsn.gpio0_10 PRU0 RX_CLK */
+			AM33XX_IOPAD(BONE_P8_32, PIN_INPUT | MUX_MODE7)					/* uart5.rtsn.gpio0_11 PRU0 RX DV */
+			AM33XX_IOPAD(BONE_P8_34, PIN_INPUT | MUX_MODE7)					/* uart3_rtsn.gpio2_17 PRU0 RX D0 */
+			AM33XX_IOPAD(BONE_P8_36, PIN_INPUT | MUX_MODE7)					/* uart3_ctsn.gpio2_16 PRU0 RX D1 */
+			AM33XX_IOPAD(BONE_P8_37, PIN_INPUT | MUX_MODE7)					/* uart5_txd.gpio2_14 PRU0 RX D3 */
+			AM33XX_IOPAD(BONE_P8_38, PIN_INPUT | MUX_MODE7)					/* uart5_rxd.gpio2_15 PRU0 RX D2 */
+			AM33XX_IOPAD(BONE_P8_40, PIN_INPUT | MUX_MODE7)					/* gpio2_13.gpio2_13 PRU0 RTS */
+			>;
 	};
 
 	pru_adc_pins: pru_adc_pins {
